manifest.json order

--- a/custom_components/npm_switches/manifest.json
+++ b/custom_components/npm_switches/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "npm_switches",
   "name": "NPM Switches",
+  "codeowners": [
+    "@InTheDaylight14"
+  ],
+  "config_flow": true,
   "documentation": "https://github.com/InTheDaylight14/nginx-proxy-manager-switches",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/InTheDaylight14/nginx-proxy-manager-switches/issues",
-  "version": "0.0.0",
-  "config_flow": true,
-  "codeowners": [
-    "@InTheDaylight14"
-  ]
+  "version": "0.0.0"
 }
