iot_class to local polling

--- a/custom_components/npm_switches/manifest.json
+++ b/custom_components/npm_switches/manifest.json
@@ -6,7 +6,7 @@
   ],
   "config_flow": true,
   "documentation": "https://github.com/InTheDaylight14/nginx-proxy-manager-switches",
-  "iot_class": "cloud_polling",
+  "iot_class": "local_polling",
   "issue_tracker": "https://github.com/InTheDaylight14/nginx-proxy-manager-switches/issues",
-  "version": "1.0.1"
+  "version": "1.0.2"
 }
