--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -49,10 +49,11 @@ jobs:
         run: |
           pytest \
             -qq \
+            --asyncio-mode=auto \
             --timeout=9 \
             --durations=10 \
             -n auto \
-            --cov custom_components.integration_blueprint \
+            --cov custom_components.npm_switches \
             -o console_output_style=count \
             -p no:sugar \
             tests
