Update pull.yml to python 3.12

--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -36,10 +36,10 @@ jobs:
     steps:
       - name: Check out code from GitHub
         uses: "actions/checkout@v2"
-      - name: Setup Python
-        uses: "actions/setup-python@v1"
+      - name: Setup Python 3.12
+        uses: "actions/setup-python@v2"
         with:
-          python-version: "3.8"
+          python-version: "3.12"
       - name: Install requirements
         run: python3 -m pip install -r requirements_test.txt
       - name: Run tests
